--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,6 @@ features = ["System",
             "Win32_UI_Shell",
             "Win32_System_Threading",
             "Win32_Storage_Packaging_Appx",
+            "Win32_System_LibraryLoader",
+            "Win32_Storage_FileSystem"
             ]
