--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,7 @@ features = ["System",
             "Win32_System_Threading",
             "Win32_Storage_Packaging_Appx",
             "Win32_System_LibraryLoader",
-            "Win32_Storage_FileSystem"
+            "Win32_Storage_FileSystem",
+            "Win32_Security_Authorization",
+            "Win32_Security"
             ]
