--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ features = ["System",
             "Win32_System_LibraryLoader",
             "Win32_Storage_FileSystem",
             "Win32_Security_Authorization",
-            "Win32_Security"
+            "Win32_Security",
+            "Win32_System_Memory",
+            "Win32_System_Diagnostics_Debug"
             ]
